--- a/main.py.ipynb
+++ b/main.py.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "read data and identify potential problems\n",
-    "- normalize headlines and remove accents marks (unidecode)"
+    "# Discovering disease outbreaks\n",
+    "## 1. extracting city & country data from news headlines\n",
+    "- analyse and identify potential problems in of the data\n",
+    "- normalize headlines and remove accents marks (unidecode)\n",
+    "- optimize where possible"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +96,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The first version of the script needed about 1000sec to execute and required a better approach**"
+    "**The first version of the script needed about *1000sec* to execute and required a better approach:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,14 +294,14 @@
       "Found city: \"Caucasia\" in \"Zika spreads to Caucasia\"\n",
       "Found city: \"Bello\" in \"Zika symptoms spotted in Bello\"\n",
       "Found city: \"Barranquilla\" in \"Zika spreads to Barranquilla\"\n",
-      "Found city: \"San Diego\" in \"Key Zika Findings in San Diego Institute\"\n",
-      "Found city: \"Havana\" in \"Zika Virus Transmission Detected in Havana\"\n"
+      "Found city: \"San Diego\" in \"Key Zika Findings in San Diego Institute\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found city: \"Havana\" in \"Zika Virus Transmission Detected in Havana\"\n",
       "Found city: \"Praia\" in \"Praia tests new cure for Pneumonia\"\n",
       "Found city: \"Pilsen\" in \"Pilsen Encounters Severe Symptoms of Malaria\"\n",
       "Found city: \"Stuttgart\" in \"More Patients in Stuttgart are Getting Diagnosed with Rabies\"\n",
@@ -558,14 +561,14 @@
       "Found city: \"Panama City\" in \"Outbreak of Zika in Panama City\"\n",
       "Found city: \"Pensacola\" in \"More Zika patients reported in Pensacola\"\n",
       "Found city: \"Pinewood\" in \"Zika Outbreak in Pinewood\"\n",
-      "Found city: \"Plant City\" in \"Zika spreads to Plant City\"\n",
-      "Found city: \"Princeton\" in \"Princeton Encounters Severe Symptoms of Dengue\"\n"
+      "Found city: \"Plant City\" in \"Zika spreads to Plant City\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found city: \"Princeton\" in \"Princeton Encounters Severe Symptoms of Dengue\"\n",
       "Found city: \"St. Petersburg\" in \"Zika Strikes St. Petersburg\"\n",
       "Found city: \"Sarasota\" in \"New Zika Case Confirmed in Sarasota County\"\n",
       "Replacing previously found city \"Florida\" in \"Zika Patient in Seminole, Florida\" with \"Seminole\"\n",
@@ -681,16 +684,16 @@
       "Found city: \"Iowa City\" in \"Iowa City Encounters Severe Symptoms of Rhinovirus\"\n",
       "Found city: \"Bridgeport\" in \"Bridgeport authorities confirmed the spread of West Nile Virus\"\n",
       "Found city: \"Chicago\" in \"Chicago's First Zika Case Confirmed\"\n",
-      "Found city: \"Deerfield\" in \"Deerfield tests new cure for Measles\"\n",
-      "Found city: \"East Moline\" in \"Will Gonorrhea vaccine help East Moline?\"\n",
-      "Found city: \"Joliet\" in \"Rumors about Rotavirus Spreading in Joliet have been Refuted\"\n",
-      "Found city: \"Lansing\" in \"The Spread of Hepatitis E in Lansing has been Confirmed\"\n"
+      "Found city: \"Deerfield\" in \"Deerfield tests new cure for Measles\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found city: \"East Moline\" in \"Will Gonorrhea vaccine help East Moline?\"\n",
+      "Found city: \"Joliet\" in \"Rumors about Rotavirus Spreading in Joliet have been Refuted\"\n",
+      "Found city: \"Lansing\" in \"The Spread of Hepatitis E in Lansing has been Confirmed\"\n",
       "Found city: \"Urbana\" in \"Urbana Encounters Severe Symptoms of Meningitis\"\n",
       "Found city: \"Crawfordsville\" in \"More Patients in Crawfordsville are Getting Diagnosed with Rabies\"\n",
       "Found city: \"South Bend\" in \"How to Avoid Hepatitis E in South Bend\"\n",
@@ -819,7 +822,8 @@
       "Found city: \"Mpika\" in \"Mpika authorities confirmed the spread of Chikungunya\"\n",
       "Found city: \"Kitwe\" in \"More people in Kitwe are infected with Respiratory Syncytial Virus every year\"\n",
       "Found city: \"Harare\" in \"Harare is infested with Pneumonia\"\n",
-      "Execute v2 in 17.711673100000098 seconds\n"
+      "\n",
+      "Executed v2 in 19.301241800000007 seconds\n"
      ]
     }
    ],
@@ -870,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +947,7 @@
        "4  Dallas man comes down with case of Zika      None         Dallas"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
