Added a save as json line in chapter 2

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -1547,6 +1547,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving data to json for easier retrieving in chapter3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_json(\"data/chapter2-data.json\", orient=\"columns\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
